--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.8.1
 Django==5.1.3
 djangorestframework==3.15.2
+gunicorn==23.0.0
+packaging==24.2
+psycopg==3.2.3
+psycopg-binary==3.2.3
+psycopg-pool==3.2.4
 psycopg2==2.9.10
 sqlparse==0.5.2
+typing_extensions==4.12.2
 tzdata==2024.2
+whitenoise==6.8.2
